<resources>
    <string name="app_name">GameLibrary</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_library">Biblioteca</string>
    <string name="title_wishlist">Desejados</string>
    <string name="title_profile">Perfil</string>
    <string name="title_add">Adicionar</string>
    <string name="button_add">Adicionar</string>
    <string name="button_take_photo">Tirar Foto</string>
    <string name="button_open_gallery">Abrir Galeria</string>
    <string name="button_cancel_description">Botão Cancelar</string>
    <string name="button_cancel">Cancelar</string>

    <string name="activity_add_platform">AddPlatformActivity</string>
    <string name="title_add_platform">Adicionar Plataforma</string>
    <string name="button_add_platform">Botão Adicionar Plataforma</string>
    <string name="image_add_platform">Adicionar Foto Da Plataforma</string>
    <string name="insert_platform_name">Insira o nome da plataforma (obrigatório)</string>
    <string name="insert_platform_release_date">Insira o ano de lançamento (opcional)</string>
    <string name="insert_platform_image">Insira uma foto da plataforma</string>

    <string name="activity_add_game">AddGameActivity</string>
    <string name="title_add_game">Adicionar Jogo de\n%1$s</string>
    <string name="button_add_game">Adicionar Jogo</string>
    <string name="button_add_game_description">Botão Adicionar Jogo</string>
    <string name="image_add_game">Adicionar Foto Do Jogo</string>
    <string name="insert_game_name">Insira o nome do jogo (obrigatório)</string>
    <string name="insert_game_genre">Gênero</string>
    <string name="insert_game_release_date">Ano (YYYY)</string>
    <string name="insert_game_rating">Avaliação</string>
    <string name="textview_game_status">Qual o status do jogo</string>
    <string name="game_status_on_queue">Na fila</string>
    <string name="game_status_started">Iniciado</string>
    <string name="game_status_finished">Finalizado</string>
    <string name="add_to_wishlist">Adicionar à lista de desejos</string>
    <string name="textview_game_description">Descrição do jogo</string>
    <string name="textview_add_cover">Adicionar imagem da capa</string>
    <string name="insert_game_image">Insira uma foto do jogo</string>
</resources>