<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".ui.add.platform.AddGameActivity">
        <TextView
            android:id="@+id/tvAddGameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/title_add_game"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insert_game_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@id/tvAddGameTitle"
            app:layout_constraintStart_toStartOf="@id/tvAddGameTitle"
            app:layout_constraintTop_toBottomOf="@id/tvAddGameTitle" />

        <EditText
            android:id="@+id/etGameGenre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/insert_game_genre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@id/etGameReleaseDate"
            app:layout_constraintStart_toStartOf="@id/etGameName"
            app:layout_constraintTop_toBottomOf="@id/etGameName" />

        <EditText
            android:id="@+id/etGameReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/insert_game_release_date"
            android:layout_marginHorizontal="8dp"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toEndOf="@id/etGameGenre"
            app:layout_constraintEnd_toStartOf="@id/etGameRating"
            app:layout_constraintTop_toTopOf="@id/etGameGenre"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etGameRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/insert_game_rating"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toEndOf="@id/etGameReleaseDate"
            app:layout_constraintEnd_toEndOf="@id/etGameName"
            app:layout_constraintTop_toTopOf="@id/etGameGenre"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/ivAddPlatform"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="false"
            android:background="@drawable/imageview_background"
            android:contentDescription="@string/image_add_platform"
            android:minHeight="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etGameReleaseDate" />

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/button_take_photo"
            android:backgroundTint="@color/purple_700"
            android:text="@string/button_take_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnOpenGallery"
            app:layout_constraintTop_toBottomOf="@id/ivAddPlatform"/>

        <Button
            android:id="@+id/btnOpenGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/button_open_gallery"
            android:backgroundTint="@color/purple_700"
            android:text="@string/button_open_gallery"
            app:layout_constraintTop_toBottomOf="@id/ivAddPlatform"
            app:layout_constraintStart_toEndOf="@id/btnTakePicture"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnAddPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/button_add_platform"
            android:text="@string/title_add_platform"
            app:layout_constraintTop_toBottomOf="@id/btnTakePicture"/>

        <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/button_cancel_description"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        android:overScrollMode="always"
        android:text="@string/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/btnAddPlatform"
        tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>